# GBEmulator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
devtools/: bits_res_generator.py  gen_add.py  gen_sub.py  generateLine.py  generate_L8_tests.py  generate_bits_deref.py  get_instr.py  lambda_to_switch.py  raw_html.txt  raw_html_bits  rawdata_to_list_of_list.py  z80_html_doc_parser.py
devtools/raw_data/: lambda  res_bits
docs/: _a_p_u_8cpp.html  _a_p_u_8cpp__incl.map  _a_p_u_8cpp__incl.md5  _a_p_u_8hpp.html  _a_p_u_8hpp__dep__incl.map  _a_p_u_8hpp__dep__incl.md5  _a_p_u_8hpp__incl.map  _a_p_u_8hpp__incl.md5  _a_p_u_8hpp_source.html  _basic_instructions_8cpp.html  _basic_instructions_8cpp__incl.map  _basic_instructions_8cpp__incl.md5  _bgb_handler_8cpp.html  _bgb_handler_8cpp__incl.map  _bgb_handler_8cpp__incl.md5  _bgb_handler_8hpp.html  _bgb_handler_8hpp__dep__incl.map  _bgb_handler_8hpp__dep__incl.md5  _bgb_handler_8hpp__incl.map  _bgb_handler_8hpp__incl.md5  _bgb_handler_8hpp_source.html  _bgb_protocol_network_interface_8cpp.html  _bgb_protocol_network_interface_8cpp__incl.map  _bgb_protocol_network_interface_8cpp__incl.md5  _bgb_protocol_network_interface_8hpp.html  _bgb_protocol_network_interface_8hpp__dep__incl.map  _bgb_protocol_network_interface_8hpp__dep__incl.md5  _bgb_protocol_network_interface_8hpp__incl.map  _bgb_protocol_network_interface_8hpp__incl.md5  _bgb_protocol_network_interface_8hpp_source.html  _bit_instructions_8cpp.html  _bit_instructions_8cpp__incl.map  _bit_instructions_8cpp__incl.md5  _c_p_u_8cpp.html  _c_p_u_8cpp__incl.map  _c_p_u_8cpp__incl.md5  _c_p_u_8hpp.html  _c_p_u_8hpp__dep__incl.map  _c_p_u_8hpp__dep__incl.md5  _c_p_u_8hpp__incl.map  (+1237 more)
docs/html/: _a_p_u_8cpp.html  _a_p_u_8cpp__incl.map  _a_p_u_8cpp__incl.md5  _a_p_u_8hpp.html  _a_p_u_8hpp__dep__incl.md5  _a_p_u_8hpp__incl.map  _a_p_u_8hpp__incl.md5  _a_p_u_8hpp_source.html  _basic_instructions_8cpp.html  _basic_instructions_8cpp__incl.map  _basic_instructions_8cpp__incl.md5  _bgb_handler_8cpp.html  _bgb_handler_8hpp_source.html  _bgb_protocol_network_interface_8cpp.html  _bgb_protocol_network_interface_8cpp__incl.map  _bgb_protocol_network_interface_8cpp__incl.md5  _bgb_protocol_network_interface_8hpp.html  _bgb_protocol_network_interface_8hpp__dep__incl.map  _bgb_protocol_network_interface_8hpp__dep__incl.md5  _bgb_protocol_network_interface_8hpp__incl.map  _bgb_protocol_network_interface_8hpp__incl.md5  _bgb_protocol_network_interface_8hpp_source.html  _bit_instructions_8cpp.html  _bit_instructions_8cpp__incl.map  _bit_instructions_8cpp__incl.md5  _c_p_u_8cpp.html  _c_p_u_8cpp__incl.map  _c_p_u_8cpp__incl.md5  _c_p_u_8hpp.html  _c_p_u_8hpp__dep__incl.md5  _c_p_u_8hpp__incl.map  _c_p_u_8hpp__incl.md5  _c_p_u_8hpp_source.html  _c_p_u_instructions_8cpp.html  _c_p_u_instructions_8cpp__incl.map  _c_p_u_instructions_8cpp__incl.md5  _c_p_u_instructions_8hpp.html  _c_p_u_instructions_8hpp__dep__incl.md5  _c_p_u_instructions_8hpp__incl.map  _c_p_u_instructions_8hpp__incl.md5  (+824 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+70 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+108 more)
gui/: debugger.gui  gpu.gui
gui/gpu/: control.gui
pkgs/: FindSDL2.cmake  FindSFML.cmake
src/: CPU.cpp  CPU.hpp  CreateInferfaceImpl.cpp  CreateInferfaceImpl.hpp  DummyDevices.hpp  main.cpp
src/ArduinoStuff/: Algorithm.h  FakeSTL.hpp  Impl.cpp  Memory.hpp
src/CableLink/: BgbProtocolNetworkInterface.cpp  BgbProtocolNetworkInterface.hpp  CableInterface.cpp  CableInterface.hpp
src/FileDiscoveryRom/: Makefile  file_discovery.gbc  file_discovery.inl  file_discovery.link  inliner.py
src/Joypad/: JoypadEmulator.hpp  RaspberryJoypadEmulator.cpp  RaspberryJoypadEmulator.hpp  SDLKeyboardJoypadEmulator.cpp  SDLKeyboardJoypadEmulator.hpp  SfmlKeyboardJoypadEmulator.cpp  SfmlKeyboardJoypadEmulator.hpp
src/LCD/: ILCD.cpp  ILCD.hpp  LCDSDL.cpp  LCDSDL.hpp  LCDSFML.cpp  LCDSFML.hpp  LCDSerenityLibGui.cpp  LCDSerenityLibGui.hpp  SerenityPlatformWindow.cpp  SerenityPlatformWindow.hpp
src/Memory/: Cartridge.cpp  Cartridge.hpp  Memory.cpp  Memory.hpp  ROM.cpp  ROM.hpp
src/Network/: BgbHandler.cpp  BgbHandler.hpp  BgbProtocolNetworkInterface.cpp  BgbProtocolNetworkInterface.hpp  CableInterface.cpp  CableInterface.hpp  Exception.hpp  GbgProtocolNetworkInterface.cpp  GbgProtocolNetworkInterface.hpp  ProtocolHandle.hpp  TCPServerSocket.cpp  TCPServerSocket.hpp  TCPSocket.cpp  TCPSocket.hpp
src/ProcessingUnits/: APU.cpp  APU.hpp  CPU.cpp  CPU.hpp  CPUInstructions.cpp  CPUInstructions.hpp  CPU_Instructions.cpp  CPU_Instructions.hpp  GPU.cpp  GPU.hpp  MSVCRanges.hpp  StartupCode.cpp
src/Sound/: ISound.hpp  RaspberrySoundPlayer.cpp  RaspberrySoundPlayer.hpp  SDLSoundPlayer.cpp  SDLSoundPlayer.hpp  SFMLSoundPlayer.cpp  SFMLSoundPlayer.hpp  SoundPlayer.cpp  SoundPlayer.hpp
src/Timing/: Clock.cpp  Clock.hpp  Timer.cpp  Timer.hpp
src/debugger/: CompiledCondition.cpp  CompiledCondition.hpp  GUIdebugger.cpp  GUIdebugger.hpp  debugger.cpp  debugger.hpp
tests/: TestComponents.cpp  TestComponents.hpp  TestCpuInstruction.cpp
tests/TestCPUInstruction/: ADD.cpp  ADD16.cpp  CALL.cpp  DEC.cpp  INC.cpp  JP.cpp  JR.cpp  LD.cpp  POP.cpp  PUSH.cpp  RET.cpp  TestCpuInstruction.cpp
tests/TestCartridge/: TestMBC1.cpp
tests/TestCpu/: Test_write.cpp
tests/TestGpu/: Test_isStatInterrupt.cpp  Test_isVBlankInterrupt.cpp  Test_readVRAM.cpp  Test_writeVRAM.cpp  TestreadVRAM.cpp
tests/TestNetworking/: Makefile
tests/gb-test-roms/: readme.txt  run_tests.py
(+101 files in other folders)
